--- a/src/assets/css/me.css
+++ b/src/assets/css/me.css
@@ -1,4 +1,3 @@
-
 .card-margin-top {
     margin-top: 3vh;
 }
@@ -32,4 +31,37 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-end;
-  }
+}
+
+/* .sidebar .nav-link {
+    font-weight: 500;
+    color: #333;
+}
+
+.sidebar .nav-link .feather {
+    margin-right: 4px;
+    color: #999;
+    margin-left: -1px;
+} */
+
+/* .sidebar-sticky {
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: .5rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+} */
+
+/* @supports ((position: -webkit-sticky) or (position: sticky)) {
+    .sidebar-sticky {
+        position: -webkit-sticky;
+        position: sticky;
+    }
+} */
+
+/* .feather {
+    width: 16px;
+    height: 16px;
+    vertical-align: text-bottom;
+} */
